--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -24,6 +24,7 @@
   background: white; 
   width: 40vw; 
   border-radius: 10px; 
+  border: 1px solid rgba(128, 128, 128, 0.5); 
   height: 2.5rem;
   padding: 0 15px; 
   box-shadow: 0px 0px 8px #ddd; 
@@ -33,11 +34,11 @@
 
 input {
   background-color: transparent; 
-  border: none; 
   height: 100%; 
   width: 40vw; 
   font-size: 1.15rem; 
   margin-left: 5px; 
+  border: none; 
 }
 
 input:focus {
