--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,9 +1,7 @@
-
-
 .searchbar-results-wrapper {
   display: flex;
   flex-direction: column;
-  margin: 0 auto; 
+  margin: auto;
   font-family: 'Varela Round'
 }
 
@@ -21,30 +19,31 @@
 }
 
 .input-icon-wrapper {
-  background: white; 
-  width: 40vw; 
-  border-radius: 10px; 
-  border: 1px solid rgba(128, 128, 128, 0.5); 
+  background: white;
+  width: 40vw;
+  border-radius: 10px;
+  border: 1px solid rgba(128, 128, 128, 0.5);
   height: 2.5rem;
-  padding: 0 15px; 
-  box-shadow: 0px 0px 8px #ddd; 
-  display: flex; 
-  align-items: center; 
+  padding: 0 15px;
+  box-shadow: 0px 0px 8px #ddd;
+  display: flex;
+  align-items: center;
+  margin: auto; 
 }
 
 input {
-  background-color: transparent; 
-  height: 100%; 
-  width: 40vw; 
-  font-size: 1.15rem; 
-  margin-left: 5px; 
-  border: none; 
+  background-color: transparent;
+  height: 100%;
+  width: 40vw;
+  font-size: 1.15rem;
+  margin-left: 5px;
+  border: none;
 }
 
 input:focus {
-  outline: none; 
+  outline: none;
 }
 
 #search-icon {
-  color: royalblue; 
+  color: royalblue;
 }
