--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,10 @@ code {
   border: .1vmin solid red;
   border-radius: 1vmin;
   width: 50vw;
-  margin: auto;
+  margin: 15px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 p.error-message {
@@ -119,6 +122,7 @@ input {
   background-image: none !important;
   /* prevent lastpass */
   /* outline: none; */
+  /* text-align: center; */
   font-family: "Varela Round";
 }
 
