--- a/src/components/LineItemPage/LineItemPage.css
+++ b/src/components/LineItemPage/LineItemPage.css
@@ -2,11 +2,17 @@
 
 
 .LineItem {
-  display: flex; 
-  flex-direction: column;
+  display: grid; 
+  grid-template-columns: repeat(2, 1fr);
+  border: 1px solid red; 
+  width: 80vw; 
+  margin: auto; 
+  border-radius: 8px; 
+  font-size: 18px; 
+  /* flex-direction: column;
   align-items: center;
   border: 1px solid red; 
   margin: auto; 
   width: 80vw; 
-  border-radius: 8px;
+  border-radius: 8px; */
 }
